--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-conventional": "^11.0.0",
         "commitizen": "^4.2.2",
+        "conventional-changelog-cli": "^2.1.1",
         "cz-conventional-changelog": "^3.3.0",
         "husky": "^4.3.7",
         "lerna": "^3.22.1"
