--- a/package.json
+++ b/package.json
@@ -17,14 +17,22 @@
         "cz-conventional-changelog": "^3.3.0",
         "husky": "^4.3.7",
         "jscpd": "^3.3.23",
-        "lerna": "^3.22.1"
+        "lerna": "^3.22.1",
+        "lint-staged": "^10.5.3",
+        "prettier": "^2.2.1"
     },
     "dependencies": {},
     "husky": {
         "hooks": {
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "pre-commit": "npm run codereview && npm run lint",
-            "pre-push": "npm run lint"
+            "pre-commit": "npm run codereview && lint-staged",
+            "pre-push": "lint-staged"
         }
+    },
+    "lint-staged": {
+        "*.{js,vue,ts}": [
+            "prettier --write",
+            "npm run lint"
+        ]
     }
 }
