--- a/package.json
+++ b/package.json
@@ -25,14 +25,8 @@
     "husky": {
         "hooks": {
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "pre-commit": "npm run codereview && lint-staged",
-            "pre-push": "lint-staged"
+            "pre-commit": "lint-staged && npm run  codereview && npm run lint",
+            "pre-push": "lint-staged && npm run codereview && npm run lint"
         }
-    },
-    "lint-staged": {
-        "*.{js,vue,ts}": [
-            "prettier --write",
-            "npm run lint"
-        ]
     }
 }
