--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,16 +2,15 @@ version: 2.1
 orbs:
   node: circleci/node@4.0.1 # This version number refers to the version of the orb, not the version of NodeJS
 jobs:
-  test:
+  lint:
     executor: node/default
     steps:
       - checkout
       - node/install-packages:
           override-ci-command: lerna bootstrap
-          cache-path: ~/project/node_modules
       - run: npm run codereview
       - run: npm run lint
 workflows:
   test_my_app:
     jobs:
-      - test
+      - lint
