--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,16 @@
 version: 2.1
 orbs:
-    node: circleci/node@3.0.0
+    node: circleci/node@4.0.1 # This version number refers to the version of the orb, not the version of NodeJS
 jobs:
-    node-tests:
-        executor:
-            name: node/default
+    lint:
+        executor: node/default
         steps:
             - checkout
-            - node/with-cache:
-                  steps:
-                      - run: npm install
-                      - run: npm codereview
-                      - run: npm run lint
-            - run: echo '测试通过'
-
+            - node/install-packages:
+                  override-ci-command: npm run package
+            - run: npm run codereview
+            - run: npm run lint
 workflows:
-    node-tests:
+    test_my_app:
         jobs:
-            - node/test
+            - lint
