--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         steps:
             - checkout
             - node/install-packages:
-                  override-ci-command: npm run package
+            - run: npm run package
             - run: npm run codereview
             - run: npm run lint
 workflows:
