--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "root",
     "private": true,
     "scripts": {
-        "codereview": "jscpd",
+        "codereview": "jscpd packages/",
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "commit": "git add -A && git-cz",
+        "package": "lerna bootstrap",
         "dev": "lerna run dev --parallel",
         "lint": "lerna run lint",
         "build": "lerna run build"
