--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
             - run: npm run package
             - run: npm run codereview
             - run: npm run lint
+            - run: npm run test
 workflows:
     test_my_app:
         jobs:
