--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "dev": "nodemon ./src/index.ts",
         "build": "tsc --noEmit && tsc --project ./",
-        "lint": "tsc --noEmit",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint": "tsc --noEmit"
     },
     "keywords": [],
     "author": "",
